Fine Griglia Inizio lavoro

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <!-- -----HEADER----- -->
-  <header class="">
+  <header>
     <!-- -----Sony-header----- -->
     <div class="container-fluid debug">
 
@@ -292,17 +292,122 @@
     </div>
 
   </section>
-  
-
   <!-- -----/PS-PLUS----- -->
 
 
+
+
+
+
+
+
+
+  <!-- -----PS-STORE----- -->
+  <section class="explore-ps5-container debug p-5">
+
+    <div class="container-fluid debug">
+
+      <div class="row text-center row-cols-1">
+
+        <p class="col debug">Lorem, ipsum dolor.</p>
+
+        <p class="col debug">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque odio nesciunt fugit!</p>
+
+      </div>
+
+    </div>
+
+  </section>
+  <!-- -----/PS-STORE----- -->
+  
+  <!-- -----SALES----- -->
+  <section class="accessori-container debug p-5">
+
+    <div class="container-fluid">
+
+      <div class="row row-cols-1 row-cols-sm-3">
+        <div class="col debug">1</div>
+        <div class="col debug">2</div>
+        <div class="col debug">3</div>
+      </div>
+
+    </div>
+
+  </section>
+  <!-- -----/SALES----- -->
+  
+  <!-- -----PS-NOW----- -->
+  <section class="jumbotron debug p-5">
+
+    <div class="container-fluid debug">
+
+      <div class="row debug ">
+
+        <div class="col-12 col-md-6 debug">
+          <div class="debug"> LOGHISSIMO </div>
+
+          <p class="debug">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, quibusdam.</p>
+
+          <div class="debug">BOTTONE</div>
+          
+        </div>
+
+        <div class="col-6 debug d-none d-md-block">1</div>
+
+      </div>
+
+    </div>
+
+  </section>
+  <!-- -----/PS-NOW----- -->
+  
+  <!-- -----PS-OCIAL----- -->
+  <section class="social debug p-5" >
+
+    <div class="container">
+      <div class="row text-center">
+
+        <div class="col-12debug">SOCIAL</div>
+
+      </div>
+
+      <div class="row  row-cols-2 row-cols-sm-4  debug">
+
+        <div class="col debug">1</div>
+
+        <div class="col debug">2</div>
+
+        <div class="col debug">3</div>
+
+        <div class="col debug">4</div>
+
+      </div>
+
+
+    </div>
+
+  </section>
+  <!-- -----/PS-OCIAL----- -->
 
   </main>
   <!-- -----/MAIN----- -->
 
   <!-- -----FOOTER----- -->
-  <footer>F</footer>
+  <footer>
+
+    <div class="container-fluid p-5 debug">
+
+      <div class="row debug">
+
+        <div class="col-6 debug">1</div>
+        <div class="col-6 debug">2</div>
+        <div class="col-6 debug">1</div>
+
+      </div>
+
+    </div>
+
+  </footer>
   <!-- -----/FOOTER----- -->
 
 </body>
